syntax = "proto3";

package belfrics.belfrics;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "belfrics/belfrics/params.proto";
import "belfrics/belfrics/kyc.proto";
import "belfrics/belfrics/kyc_2.proto";

option go_package = "belfrics/x/belfrics/types";

// Query defines the gRPC querier service.
service Query {
  
  // Parameters queries the parameters of the module.
  rpc Params (QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/belfrics/belfrics/params";
  
  }
  
  // Queries a list of Kyc items.
  rpc Kyc    (QueryGetKycRequest) returns (QueryGetKycResponse) {
    option (google.api.http).get = "/belfrics/belfrics/kyc/{index}";
  
  }
  rpc KycAll (QueryAllKycRequest) returns (QueryAllKycResponse) {
    option (google.api.http).get = "/belfrics/belfrics/kyc";
  
  }
  
  // Queries a list of Kyc2 items.
  rpc Kyc2    (QueryGetKyc2Request) returns (QueryGetKyc2Response) {
    option (google.api.http).get = "/belfrics/belfrics/kyc_2/{address}";
  
  }
  rpc Kyc2All (QueryAllKyc2Request) returns (QueryAllKyc2Response) {
    option (google.api.http).get = "/belfrics/belfrics/kyc_2";
  
  }
}
// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  
  // params holds all the parameters of this module.
  Params params = 1 [(gogoproto.nullable) = false];
}

message QueryGetKycRequest {
  string index = 1;
}

message QueryGetKycResponse {
  Kyc kyc = 1 [(gogoproto.nullable) = false];
}

message QueryAllKycRequest {
  cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryAllKycResponse {
  repeated Kyc                                    kyc        = 1 [(gogoproto.nullable) = false];
           cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

message QueryGetKyc2Request {
  string address = 1;
}

message QueryGetKyc2Response {
  Kyc2 kyc2 = 1 [(gogoproto.nullable) = false];
}

message QueryAllKyc2Request {
  cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryAllKyc2Response {
  repeated Kyc2                                   kyc2       = 1 [(gogoproto.nullable) = false];
           cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

